--- a/css/shopping_cart.css
+++ b/css/shopping_cart.css
@@ -1,35 +1,55 @@
-:root{
-    --very-light-pink: #c7c7c7;
-    --text-input-field: #f7f7f7;
-    --hospital-green: #acd9b2;
-    --white: #ffffff;
+:root {
+    --white: #FFFFFF;
     --black: #000000;
+    --very-light-pink: #C7C7C7;
+    --text-input-field: #F7F7F7;
+    --hospital-green: #ACD9B2;
     --sm: 14px;
     --md: 16px;
     --lg: 18px;
-}
+  }
 
-body{
+body {
     margin: 0;
     font-family: 'Quicksand', sans-serif;
+  }
+
+.title-container{
+    display: flex;
 }
 
-.my-order{
-    width: 100%;
-    height: 100vh;
-    display: grid;
-    place-items: center;
+.title-container img{
+    cursor: pointer;
+    transform: rotate(180deg);
+    margin-right: 14px;
 }
 
 .title{
     font-size: var(--lg);
-    margin-bottom: 40px;
+    font-weight: bold;
 }
 
-.my-order-container{
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-    width: 300px;
+.primary-button{
+    background-color: var(--hospital-green);
+    color: var(--white);
+    border-radius: 8px;
+    border: none;
+    width: 100%;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.product-detail{
+    padding: 24px;
+    width: 360px;
+    position: absolute;
+    right: 0;
+    box-sizing: border-box;
 }
 
 .my-order-content{
@@ -57,7 +77,7 @@ body{
 
 .shopping-cart{
     display: grid;
-    grid-template-columns: auto 1fr auto auto;
+    grid-template-columns: auto 1fr auto auto auto;
     gap: 16px;
     margin-bottom: 24px;
     align-items: center;
@@ -65,6 +85,10 @@ body{
 
 .shopping-cart figure{
     margin: 0;
+}
+
+.shopping-cart > img:last-child{
+    cursor: pointer;
 }
 
 .order{
@@ -88,12 +112,13 @@ body{
     font-weight: bold;
 }
 
-.order p span:nth-child(2){
-    font-size: var(--sm);
-    color: var(--very-light-pink);
-}
-
 .order p:nth-child(2){
     text-align: end;
     font-weight: bold;
 }
+
+@media (max-width: 640px) {
+    .product-detail {
+      width: 100%;
+    }
+  }
