--- a/css/fusion.css
+++ b/css/fusion.css
@@ -1,3 +1,4 @@
+/* Estilos general */
 :root {
     --white: #FFFFFF;
     --black: #000000;
@@ -18,6 +19,7 @@ body {
     display: none;
 }
 
+/* Navbar general */
 nav {
   display: flex;
   justify-content: space-between;
@@ -26,7 +28,8 @@ nav {
 }
 
 .menu {
-  display: none;
+    display: none;
+    cursor: pointer;
 }
 
 .logo {
@@ -92,6 +95,7 @@ nav {
   align-items: center;
 }
 
+/* Desktop menu */
 .dsk-menu{
     width: 100px;
     height: auto;
@@ -135,7 +139,49 @@ nav {
     display: block;
 } 
 
+/* mobile menu */
+.mobile-menu{
+    position: absolute;
+    top: 60px;
+    padding: 24px;
+}
+
+.mobile-menu a{
+    text-decoration: none;
+    color: var(--black);
+    font-weight: bold;
+}
+
+.mobile-menu ul{
+    padding: 0;
+    margin: 24px 0 0;
+    list-style: none;
+}
+
+.mobile-menu ul:nth-child(1){
+    border-bottom: 1px solid var(--very-light-pink);
+}
+
+.mobile-menu ul li{
+    margin-bottom: 24px;
+}
+
+.email{
+    font-size: var(--sm);
+    font-weight: 300 !important;
+}
+
+.sign-out{
+    color: var(--hospital-green) !important;
+    font-size: var(--sm);
+}
+
 @media (max-width: 640px) {
+
+  .dsk-menu {
+    display: none;
+  }  
+
   .menu {
     display: block;
   }
@@ -145,4 +191,10 @@ nav {
   .navbar-email {
     display: none;
   }
+}
+
+@media (min-width: 641px) {
+    .mobile-menu{
+        display: none;
+    }
 }
