--- a/css/fusion.css
+++ b/css/fusion.css
@@ -78,6 +78,7 @@ nav {
 
 .navbar-shopping-cart {
   position: relative;
+  cursor: pointer;
 }
 
 .navbar-shopping-cart div {
@@ -141,6 +142,7 @@ nav {
 
 /* mobile menu */
 .mobile-menu{
+  background-color: var(--white);
     position: absolute;
     top: 60px;
     padding: 24px;
@@ -176,7 +178,116 @@ nav {
     font-size: var(--sm);
 }
 
+/* Aside product detail */
+.title-container{
+  display: flex;
+}
+
+.title-container img{
+  cursor: pointer;
+  transform: rotate(180deg);
+  margin-right: 14px;
+}
+
+.title{
+  font-size: var(--lg);
+  font-weight: bold;
+}
+
+.primary-button{
+  background-color: var(--hospital-green);
+  color: var(--white);
+  border-radius: 8px;
+  border: none;
+  width: 100%;
+  cursor: pointer;
+  font-size: var(--md);
+  font-weight: bold;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.product-detail{
+  background-color: var(--white);
+  padding: 0 24px;
+  width: 360px;
+  position: absolute;
+  right: 0;
+  box-sizing: border-box;
+}
+
+.my-order-content{
+  display: flex;
+  flex-direction: column ;
+}
+
+.shopping-cart figure img{
+  width: 100px;
+  height: 100px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+
+.shopping-cart p:nth-child(2){
+  color: var(--very-light-pink);
+
+}
+
+.shopping-cart p:nth-child(3){
+  font-size: var(--md);
+  font-weight: bold;
+
+}
+
+.shopping-cart{
+  display: grid;
+  grid-template-columns: auto 1fr auto auto auto;
+  gap: 16px;
+  margin-bottom: 24px;
+  align-items: center;
+}
+
+.shopping-cart figure{
+  margin: 0;
+}
+
+.shopping-cart > img:last-child{
+  cursor: pointer;
+}
+
+.order{
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 16px;
+  align-items: center;
+  background: var(--text-input-field);
+  margin-bottom: 24px;
+  border-radius: 8px;
+  padding: 0 24px;
+}
+
+.order p:nth-child(1){
+  display: flex;
+  flex-direction: column;
+}
+
+.order p span:nth-child(1){
+  font-size: var(--md);
+  font-weight: bold;
+}
+
+.order p:nth-child(2){
+  text-align: end;
+  font-weight: bold;
+}
+
+
 @media (max-width: 640px) {
+  .product-detail {
+    width: 100%;
+  }
 
   .dsk-menu {
     display: none;
