--- a/css/fusion.css
+++ b/css/fusion.css
@@ -283,8 +283,71 @@ nav {
   font-weight: bold;
 }
 
+/* Product list */
+.card-container{
+  display: grid;
+  place-content: center;
+  grid-template-columns: repeat(auto-fill, 240px);
+  gap: 26px;
+  margin-top: 20px;
+}
 
+.product-card{
+  width: 240px;
+}
+
+.product-card > img{
+  width: 240px;
+  height: 240px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+
+.product-info{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 12px;
+}
+
+.product-info figure{
+  margin: 0;
+}
+
+.product-info figure img{
+  width: 35px;
+  height: 35px;
+}
+
+.product-info div p:nth-child(1){
+  font-weight: bold;
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+
+.product-info div p:nth-child(2){
+  color: var(--very-light-pink);
+  font-size: var(--sm);
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+/* media query */
 @media (max-width: 640px) {
+  .card-container{
+    grid-template-columns: repeat(auto-fill, 140px);
+  }
+
+.producto-card{
+    width: 140px;
+  }
+
+.producto-card > img{
+    width: 140px;
+    height: 140px;
+  }
+
   .product-detail {
     width: 100%;
   }
