--- a/css/detail.css
+++ b/css/detail.css
@@ -29,7 +29,7 @@ body {
     justify-content: center;
 }
 
-.producto-detail-close{
+.product-detail-close{
     position: absolute;
     width: 14px;
     height: 14px;
@@ -41,43 +41,43 @@ body {
     border-radius: 50%;
 }
 
-.producto-detail-close:hover{
+.product-detail-close:hover{
     cursor: pointer;
 }
 
-.product-detail{
+.detail-view{
     padding-bottom: 24px;
     width: 360px;
     position: absolute;
     right: 0;
 }
 
-.product-detail > img{
+.detail-view > img{
     width: 100%;
     height: 360px;
     object-fit: cover;
     border-radius: 0 0 20px 20px;
 }
 
-.product-info{
+.detail-info{
     margin: 24px 24px 0 24px;
 }
 
-.product-info p:nth-child(1){
+.detail-info p:nth-child(1){
     font-weight: bold;
     font-size: var(--md);
     margin-top: 0;
     margin-bottom: 4px;
 }
 
-.product-info p:nth-child(2){
+.detail-info p:nth-child(2){
     color: var(--very-light-pink);
     font-size: var(--md);
     margin-top: 0;
     margin-bottom: 28px;
 }
 
-.product-info p:nth-child(3){
+.detail-info p:nth-child(3){
     color: var(--very-light-pink);
     font-size: var(--sm);
     margin-top: 0;
@@ -85,7 +85,7 @@ body {
 }
 
 @media (max-width: 640px) {
-    .product-detail {
+    .detail-view {
       width: 100%;
     }
   }
