--- a/css/fusion.css
+++ b/css/fusion.css
@@ -143,9 +143,12 @@ nav {
 /* mobile menu */
 .mobile-menu{
   background-color: var(--white);
-    position: absolute;
-    top: 60px;
-    padding: 24px;
+  position: absolute;
+  top: 60px;
+  padding: 24px;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .mobile-menu a{
@@ -283,6 +286,63 @@ nav {
   font-weight: bold;
 }
 
+/* product detail */
+.product-detail-close{
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  background-color: var(--white);
+  top: 12px;
+  left: 12px;
+  z-index: 2;
+  padding: 10px;
+  border-radius: 50%;
+}
+
+.product-detail-close:hover{
+  cursor: pointer;
+}
+
+.detail-view{
+  background-color: var(--white);
+  padding-bottom: 24px;
+  width: 360px;
+  position: absolute;
+  right: 0;
+}
+
+.detail-view > img{
+  width: 100%;
+  height: 360px;
+  object-fit: cover;
+  border-radius: 0 0 20px 20px;
+}
+
+.detail-info{
+  margin: 24px 24px 0 24px;
+}
+
+.detail-info p:nth-child(1){
+  font-weight: bold;
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+
+.detail-info p:nth-child(2){
+  color: var(--very-light-pink);
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 28px;
+}
+
+.detail-info p:nth-child(3){
+  color: var(--very-light-pink);
+  font-size: var(--sm);
+  margin-top: 0;
+  margin-bottom: 36px;
+}
+
 /* Product list */
 .card-container{
   display: grid;
@@ -339,13 +399,17 @@ nav {
     grid-template-columns: repeat(auto-fill, 140px);
   }
 
-.producto-card{
+.product-card{
     width: 140px;
   }
 
-.producto-card > img{
+.product-card > img{
     width: 140px;
     height: 140px;
+  }
+
+  .detail-view {
+    width: 100%;
   }
 
   .product-detail {
