--- a/css/fusion.css
+++ b/css/fusion.css
@@ -214,8 +214,9 @@ nav {
 
 .product-detail{
   background-color: var(--white);
-  padding: 0 24px;
+  padding: 0 24px 24px 24px;
   width: 360px;
+  border-radius: 16px 0 0 16px;
   position: absolute;
   right: 0;
   box-sizing: border-box;
