--- a/css/fusion.css
+++ b/css/fusion.css
@@ -362,6 +362,7 @@ nav {
   height: 240px;
   border-radius: 20px;
   object-fit: cover;
+  cursor: pointer;
 }
 
 .product-info{
@@ -373,6 +374,7 @@ nav {
 
 .product-info figure{
   margin: 0;
+  cursor: pointer;
 }
 
 .product-info figure img{
